[Calendar] 날짜 셀 바인딩 분리 및 DayBinder 클래스 생성 - Fragment 내에서 각 날짜 셀의 바인딩 역할 분리 - 분리된 내용을 토대로 DayBinder 클래스 생성 - 오늘 날짜 강조를 위해 테두리 스타일 구현 - 각 날짜 클릭 시 배경 변경 및 도트 기능 추가 (임시 일정 데이터 확인) - 관련 문자열 리소스 정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,20 @@
     <string name="title_calendar">Calendar</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <!-- 날짜 포멧팅 -->
+    <string name="date_format">MMMM yyyy</string>
+
+    <!--요일 -->
+    <string name="day_sunday">Su</string>
+    <string name="day_monday">Mo</string>
+    <string name="day_tuesday">Tu</string>
+    <string name="day_wednesday">We</string>
+    <string name="day_thursday">Th</string>
+    <string name="day_friday">Fr</string>
+    <string name="day_saturday">Sa</string>
+
+
+
+
 </resources>
