앱 DB 및 Alba 관련 프래그먼트, 액티비티 초안 생성
- Room을 활용한 앱 DB 초안 설계
- Alba 스케줄링을 위한 프래그먼트 구조 설계
- Alba 등록을 위한 액티비티 구조 설계
- Alba 등록(regi) 및 확인(check) DB 분리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,13 @@
     <string name="date_format">MMMM yyyy</string>
 
     <!--요일 -->
-    <string name="day_sunday">Su</string>
-    <string name="day_monday">Mo</string>
-    <string name="day_tuesday">Tu</string>
-    <string name="day_wednesday">We</string>
-    <string name="day_thursday">Th</string>
-    <string name="day_friday">Fr</string>
-    <string name="day_saturday">Sa</string>
+    <string name="day_sunday">일</string>
+    <string name="day_monday">월</string>
+    <string name="day_tuesday">화</string>
+    <string name="day_wednesday">수</string>
+    <string name="day_thursday">목</string>
+    <string name="day_friday">금</string>
+    <string name="day_saturday">토</string>
 
 
 
